--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ethereum-development-with-go",
   "version": "1.0.0",
   "description": "> A little book on [Ethereum](https://www.ethereum.org/) Development with [Go](https://golang.org/) (golang)",
-  "main": "index.js",
+  "main": "pathom.js",
   "dependencies": {
     "canvas": "^1.6.11",
     "gitbook-plugin-analytics": "^0.2.1",
